# xCodex

./: .bazelrc  .gitignore  AGENTS.md  CHANGELOG.md  NOTICE  README.md  announcement_tip.toml  defs.bzl  flake.nix  justfile
codex-rs/: BUILD.bazel  Cargo.toml  default.nix
codex-rs/ansi-escape/src/: lib.rs
codex-rs/app-server/: Cargo.toml
codex-rs/app-server-protocol/schema/json/: EventMsg.json  ServerNotification.json  codex_app_server_protocol.schemas.json
codex-rs/app-server-protocol/schema/typescript/: EventMsg.ts  ExclusionCounts.ts  ExclusionLayerCounts.ts  ExclusionSourceCounts.ts  ExclusionSummaryEvent.ts  ExclusionToolCount.ts  HookProcessBeginEvent.ts  HookProcessEndEvent.ts  McpListToolsResponseEvent.ts  McpServerSnapshotState.ts  TokenUsageInfo.ts  index.ts
codex-rs/app-server/src/: bespoke_event_handling.rs
codex-rs/app-server/tests/common/: lib.rs  mcp_process.rs  models_cache.rs
codex-rs/app-server/tests/suite/: create_conversation.rs  create_thread.rs  list_resume.rs  login.rs  send_message.rs  user_agent.rs
codex-rs/arg0/src/: lib.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: config_cmd.rs  main.rs  mcp_cmd.rs  xcodex_entrypoints.rs  xcodex_subcommands.rs
codex-rs/cli/tests/: config_cmd.rs  hooks.rs  plan.rs
codex-rs/codex-api/: Cargo.toml
codex-rs/codex-api/src/: error.rs
codex-rs/codex-api/src/endpoint/: client_version.rs  compact.rs  mod.rs  models.rs  responses.rs
codex-rs/codex-api/src/sse/: chat.rs  responses.rs
codex-rs/codex-api/tests/: clients.rs  models_integration.rs
codex-rs/common/: BUILD.bazel  Cargo.toml
codex-rs/common/src/: approval_presets.rs  config_override.rs  hooks_samples_install.rs  hooks_sdk_install.rs  lib.rs  whats_new.md  whats_new.rs
codex-rs/core/: Cargo.toml  config.schema.json  models.json
codex-rs/core/src/: api_bridge.rs  bash.rs  build_info.rs  client.rs  client_common.rs  codex.rs  codex_delegate.rs  compact.rs  connectors.rs  content_gateway.rs  default_client.rs  error.rs  event_mapping.rs  exclusion_counters.rs  exclusion_log.rs  exclusion_preflight.rs  features.rs  git_info.rs  hooks.rs  hooks_test.rs  lib.rs  mcp_connection_manager.rs  plan_file.rs  safety.rs  seatbelt.rs  sensitive_paths.rs  shell_snapshot.rs  state_db.rs  user_notification.rs
codex-rs/core/src/config/: edit.rs  mod.rs  profile.rs  schema.rs  types.rs
codex-rs/core/src/context_manager/: history.rs  history_tests.rs  mod.rs
codex-rs/core/src/hooks/: claude_compat.rs
codex-rs/core/src/mcp/: mod.rs  skill_dependencies.rs
codex-rs/core/src/models_manager/: manager.rs  mod.rs  model_presets.rs
codex-rs/core/src/rollout/: list.rs  metadata.rs  policy.rs  recorder.rs  tests.rs
codex-rs/core/src/state/: service.rs  session.rs
codex-rs/core/src/tasks/: mod.rs
codex-rs/core/src/themes/: mbadolato_builtins.json  mod.rs
codex-rs/core/src/tools/: context.rs  parallel.rs  registry.rs  spec.rs
codex-rs/core/src/unified_exec/: mod.rs  process_manager.rs  session_manager.rs
codex-rs/core/src/xcodex/: config.rs  git_info.rs  hook_payload_sanitizer.rs  hooks.rs  mod.rs  themes.rs
codex-rs/core/templates/collaboration_mode/: plan.md
codex-rs/core/tests/common/: responses.rs
codex-rs/core/tests/suite/: abort_tasks.rs  approvals.rs  cli_stream.rs  client.rs  compact.rs  compact_remote.rs  context_window_accounting.rs  exec_policy.rs  list_models.rs  mod.rs  otel.rs  prompt_caching.rs  remote_models.rs  rmcp_client.rs  search_tool.rs  shell_snapshot.rs  (+5 more)
codex-rs/exec-server/: Cargo.toml
codex-rs/exec/src/: cli.rs  event_processor_with_human_output.rs  lib.rs  xcodex_non_interactive.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/feedback/src/: lib.rs
codex-rs/file-search/src/: lib.rs
codex-rs/hooks-sdk/: BUILD.bazel  Cargo.install.toml  Cargo.toml
codex-rs/hooks-sdk/src/: generated.rs  lib.rs
codex-rs/hooks-sdk/tests/: read.rs
codex-rs/login/src/: device_code_auth.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-server/src/: codex_tool_runner.rs
codex-rs/protocol/src/: models.rs  openai_models.rs  protocol.rs
codex-rs/responses-api-proxy/npm/: README.md  package.json
codex-rs/rmcp-client/src/: auth_status.rs  find_codex_home.rs  oauth.rs  rmcp_client.rs  utils.rs
codex-rs/shell-command/src/: bash.rs
codex-rs/theme-ui/: BUILD.bazel  Cargo.toml
codex-rs/theme-ui/src/: lib.rs  theme_selector_overlay.rs
codex-rs/tui/: BUILD.bazel  Cargo.toml  tooltips.txt  tooltips_xcodex.txt
codex-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  cli.rs  clipboard_copy.rs  collaboration_modes.rs  cwd_prompt.rs  diff_render.rs  external_editor.rs  file_search.rs  history_cell.rs  insert_history.rs  lib.rs  markdown_render.rs  markdown_render_tests.rs  markdown_stream.rs  model_migration.rs  pager_overlay.rs  resume_picker.rs  shimmer.rs  slash_command.rs  status_indicator_widget.rs  style.rs  theme.rs  tooltips.rs  tui.rs  update_action.rs  update_prompt.rs  updates.rs  wrapping.rs  xcodex_first_run_wizard.rs  xtreme.rs
codex-rs/tui2/: BUILD.bazel  Cargo.toml  tooltips.txt  tooltips_xcodex.txt
codex-rs/tui2/src/: app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  cli.rs  diff_render.rs  file_search.rs  history_cell.rs  insert_history.rs  lib.rs  markdown_render.rs  pager_overlay.rs  resume_picker.rs  slash_command.rs  status_indicator_widget.rs  theme.rs  tooltips.rs  transcript_copy_action.rs  transcript_copy_ui.rs  transcript_render.rs  transcript_view_cache.rs  tui.rs  update_prompt.rs  updates.rs  wrapping.rs  xcodex_first_run_wizard.rs
codex-rs/xcodex/: BUILD.bazel  hooks_samples_install.rs  hooks_sdk_install.rs  tui_theme.rs  whats_new.md  whats_new.rs
codex-rs/xcodex/snapshots/: codex_tui__xcodex_first_run_wizard__tests__xcodex_first_run_wizard_choose.snap  codex_tui__xcodex_first_run_wizard__tests__xcodex_first_run_wizard_import_selective.snap  codex_tui__xcodex_first_run_wizard__tests__xcodex_first_run_wizard_review.snap
codex-rs/xcodex/theme-ui/: BUILD.bazel
codex-rs/xcodex/tui2/: BUILD.bazel  Cargo.toml  tooltips_xcodex.txt
(+595 files in other folders)
