load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "common",
    crate_name = "codex_common",
    crate_features = [
        "cli",
        "elapsed",
        "sandbox_summary",
    ],
    compile_data = ["src/whats_new.md"]
        + glob([
            "src/hooks_samples_assets/**",
            "src/hooks_sdk_assets/**",
        ])
        + [
            "//codex-rs/hooks-sdk:Cargo.install.toml",
            "//codex-rs/hooks-sdk:src/generated.rs",
            "//codex-rs/hooks-sdk:src/lib.rs",
        ],
)
