load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "common",
    crate_name = "codex_common",
    crate_features = [
        "cli",
        "elapsed",
        "sandbox_summary",
    ],
    compile_data = [
        "//codex-rs/hooks-sdk:Cargo.install.toml",
        "//codex-rs/hooks-sdk:src/generated.rs",
        "//codex-rs/hooks-sdk:src/lib.rs",
        "//codex-rs/xcodex:hooks_assets",
        "//codex-rs/xcodex:hooks_samples_install.rs",
        "//codex-rs/xcodex:hooks_sdk_install.rs",
        "//codex-rs/xcodex:whats_new.md",
        "//codex-rs/xcodex:whats_new.rs",
    ],
)
