[package]
name = "codex-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
codex-utils-approval-presets = { workspace = true }
codex-utils-cli = { workspace = true, optional = true }
codex-utils-elapsed = { workspace = true, optional = true }
codex-utils-fuzzy-match = { workspace = true }
codex-utils-oss = { workspace = true }
codex-utils-sandbox-summary = { workspace = true, optional = true }

[features]
cli = ["dep:codex-utils-cli"]
elapsed = ["dep:codex-utils-elapsed"]
sandbox_summary = ["dep:codex-utils-sandbox-summary"]

[dev-dependencies]
codex-utils-absolute-path = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
