load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "theme-ui",
    crate_name = "codex_theme_ui",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)

filegroup(
    name = "theme_selector_overlay_rs",
    srcs = ["src/theme_selector_overlay.rs"],
    visibility = ["//visibility:public"],
)
