load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "tui",
    crate_name = "codex_tui",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ) + [
        "//codex-rs/xcodex/theme-ui:theme_selector_overlay_rs",
        "//codex-rs/xcodex:tui_theme.rs",
        "//codex-rs/xcodex:tui_xcodex_first_run_wizard.rs",
    ],
    test_data_extra = glob(["src/**/snapshots/**"]),
    integration_compile_data_extra = ["src/test_backend.rs"],
    extra_binaries = [
        "//codex-rs/cli:codex",
    ],
)
